<resources>
    <string name="app_name">Fitness</string>
    <string name="error_place_holder">Error Happend.Try again!</string>
    <string name="dash_board">Trang chủ</string>
    <string name="sign_in">Đăng nhập</string>
    <string name="not_have_account">Chưa có tài khoản</string>
    <string name="create_an_account">Đăng ký</string>
    <string name="email">email</string>
    <string name="password">Mật khẩu</string>
    <string name="loading">Loading …</string>
    <string name="enter_food">Nhập tên món ăn</string>
    <string name="enter_calo">Nhập calo (kcal/100g)</string>
    <string name="insert_food">Hoàn tất</string>
    <string name="enter_target_kcal">Nhập mục tiêu kcal</string>
    <string name="enter_weight">Nhập khối lượng (g)</string>
    <string name="confirm">Xác nhận</string>
    <string name="register">Đăng ký</string>
    <string name="create_new_account">Đăng ký</string>
    <string name="already_have_an_account">"Đã có tải khoản? "</string>
    <string name="first_name">Họ tên</string>
    <string name="confirm_password">Nhập lại mật khẩu</string>
</resources>
