<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/auth_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:padding="@dimen/margin_24_dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_firebase"
            android:scaleType="centerInside"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/app_name"
            android:fontFamily="@font/lato_bold"
            android:textSize="@dimen/textsize_26_sp"
            android:layout_marginBottom="60dp"/>

        <com.kidd.fitness.custom.ClearableEditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColor="@android:color/white"
            android:textSize="@dimen/textsize_16_sp"
            android:layout_marginBottom="@dimen/margin_16_dp"
            android:textColorHint="@android:color/white"
            app:clearButtonDrawable="@drawable/ic_close"
            app:edtPadding="@dimen/margin_10_dp"
            app:edtIcon="@drawable/ic_user"
            app:edtBackground="@drawable/round_border_edit_text"/>

        <com.kidd.fitness.custom.PasswordEditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColor="@android:color/white"
            android:textSize="@dimen/textsize_18_sp"
            android:layout_marginBottom="40dp"
            android:textColorHint="@android:color/white"
            app:toggleButtonDrawable="@drawable/password_edit_text_view_button_drawable"
            app:edtPadding="@dimen/margin_10_dp"
            app:edtIcon="@drawable/ic_key"
            app:edtBackground="@drawable/round_border_edit_text"/>

        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimary"
            android:fontFamily="@font/lato_bold"
            android:layout_marginBottom="@dimen/margin_16_dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/not_have_account"
                android:fontFamily="@font/lato_regular"
                android:layout_marginRight="4dp"
                android:layout_marginEnd="4dp" />

            <TextView
                android:id="@+id/txt_create_new_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FF3E85"
                android:fontFamily="@font/lato_bold"
                android:text="@string/create_an_account"/>
        </LinearLayout>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>

